Prise en compte des remarques de Gabbro

--- a/2025/2025-03-01_PV_AGO.md
+++ b/2025/2025-03-01_PV_AGO.md
@@ -72,60 +72,53 @@ Présentation du rapport d'activité 2024. Il sera publié après l'AGO.
 - Meilleur coordination du Conseil d'Administration et un Conseil d'Administration plus actif en 2024 qu'en 2022 et 2023.
 
 - Réorganisation des équipes : Le Conseil d'Administration a échangé avec trois équipes pour parler de la situation en cours et des évolutions possibles.
+  - Validation : passage à une version plus « éditeur », avec une équipe de validation qui va chercher des validateurs externes
 
-- Validation : passage à une version plus « éditeur », avec une équipe de validation qui va chercher des validateurs externes
+  - Communication : plusieurs pistes envisagées mais la situation actuelle n'est toujours pas satisfaisante, à continuer d'améliorer en 2025
 
-- Communication : plusieurs pistes envisagées mais la situation actuelle n'est toujours pas satisfaisante, à continuer d'améliorer en 2025
-
-- Modération : petite équipe (hors spam évident). Travail encore en cours.
+  - Modération : petite équipe (hors spam évident). Travail encore en cours.
 
 - Groupes de travail :
+  - Contenus : discuter de la motivation et réfléchir à là où on veut aller, plusieurs pistes/solutions ont été évoquées mais pas beaucoup d'avancée pour le moment (même si relance des Concentrés de Savoir et des journées d'écriture), peut-être dans le futur assigner ces pistes individuellement (objectifs, presse-agrumes) ?
 
-- Contenus : discuter de la motivation et réfléchir à là où on veut aller,  plusieurs pistes/solutions ont été évoquées mais pas beaucoup d'avancée  pour le moment (même si relance des Concentrés de Savoir et des journées d'écriture), peut-être dans le futur assigner ces pistes  individuellement (objectifs, presse-agrumes) ?
+  - Budget : recherche de subvention, pas concluant en 2024. Des pistes en 2025.
 
-- Budget : recherche de subvention, pas concluant en 2024. Des pistes en 2025.
+  - Auteurs externes : idée évoquée. Rien de neuf en 2024. Continué en 2025 (l'association a été contacté par un auteur via courriel).
 
-- Auteurs externes : idée évoquée. Rien de neuf en 2024. Continué en 2025 (l'association a été contacté par un auteur via courriel).
-
-- Élitisme sur ZdS : problème d'entre-soi remonté au sein de la communauté. La communauté se gère, le CA surveille et supporte les actions suivantes :
-
-- Code de conduite officialisé (12/07/2024) et approuvé par la communauté.  L'écrit étant un format difficile pour faire passer les émotions, on  aimerait faire attention à la perception des propos sur autrui.
+- Élitisme sur ZdS : problème d'entre-soi remonté au sein de la communauté. La communauté se gère, le CA surveille et supporte l’action suivante :
+  - Code de conduite officialisé (12/07/2024) et approuvé par la communauté. L'écrit étant un format difficile pour faire passer les émotions, on aimerait faire attention à la perception des propos sur autrui.
 
 - Trésorerie : problème d'accès au compte bancaire résolu (problèmes administratifs).
 
-- Demande de retour d'expérience pour des banques qui sont adaptées aux  associations : Crédit Agricole, Crédit Mutuel, Shine, à creuser.
+- Demande de retour d'expérience pour des banques qui sont adaptées aux associations : Crédit Agricole, Crédit Mutuel, Shine, à creuser.
 
 - Partenariats
+  - Gandi : départ de notre contact principal. Pas d'alerte particulière avant automne 2025 (car nous disposons d'assez de crédit Gandi pour tenir jusque là).
 
-- Gandi : départ de notre contact principal. Pas d'alerte particulière avant automne 2025 (car nous disposons d'assez de crédit Gandi pour tenir jusque là).
+  - Eyrolles : jeu concours pour faire gagner des livres
 
-- Eyrolles : jeu concours pour faire gagner des livres
+  - Information remontée : certains gagnants n'ont pas encore reçu leur livre.
 
-- Information remontée : certains gagnants n'ont pas encore reçu leur livre.
-
-- L'association a encore un stock de livres reçus pour en faire la promotion. Besoin de trouver une façon de distribuer ces livres en adéquations avec nos  valeurs et notre objet social de partage des connaissances pour tous.  Idée remontée : en donner à des bibliothèques publiques.
+  - L'association a encore un stock de livres reçus pour en faire la promotion. Besoin de trouver une façon de distribuer ces livres en adéquations avec nos valeurs et notre objet social de partage des connaissances pour tous. Idée remontée : en donner à des bibliothèques publiques.
 
 - 10 ans de Zeste de Savoir
+  - Publication d'un billet le jour de la date anniversaire
 
-- Publication d'un billet le jour de la date anniversaire
-
-- Plusieurs articles sur la page d'accueil : retour des 10 ans, interviews d'Arius, de philippe et (normalement bientôt) d'Amaury.
+  - Plusieurs articles sur la page d'accueil : retour des 10 ans, interviews d'Arius, de philippe et (normalement bientôt) d'Amaury.
 
 - Play Azur Festival:
+  - Représentation par Amaury et Melcore en 2024
 
-- Représentation par Amaury et Melcore en 2024
+  - Public : la pop culture.
 
-- Public : la pop culture.
-
-- Animations autour des maths, de la programmation, mise en place d'un mur du savoir.
+  - Animations autour des maths, de la programmation, mise en place d'un mur du savoir.
 
 - Mouvement dans les Réseaux Sociaux : l'association Zeste de Savoir a définitivement quitté le réseau X et a migré sur BlueSky et Threads. Pas de changement pour les autres réseaux sociaux.
 
 - Tribune "La culture scientifique contre l'extrême droite" (https://blogs.mediapart.fr/les-invites-de-mediapart/blog/040724/la-culture-scientifique-contre-lextreme-droite)
+  - Signée par Zeste de Savoir, sur décision du Conseil d'Administration
 
-- Signée par Zeste de Savoir, sur décision du Conseil d'Administration
-
-- Débat en interne sur l'adéquation de cette décision avec nos statuts, à  l'origine de la proposition de modification des statuts et du règlement  intérieur à l'ordre du jour de cette assemblée générale.
+  - Débat en interne sur l'adéquation de cette décision avec nos statuts, à l'origine de la proposition de modification des statuts et du règlement intérieur à l'ordre du jour de cette assemblée générale.
 
 - Rencontre de membres (JZdS)
 
@@ -134,16 +127,16 @@ Présentation du rapport d'activité 2024. Il sera publié après l'AGO.
 - Article de France Bleu nous mentionnant
 
 - Point sur la technique
+  - Nouveau moteur de recherche
 
-- Nouveau moteur de recherche
+  - Mise en place de Vaultwarden, une solution de stockage des secrets/mots de passes chiffrés.
 
-- Mise en place de Vaultwarden, une solution de stockage des secrets/mots de passes chiffrés.
+  - Contribution d'étudiants en école d'ingénieur (ENSEIRB) dans le cadre de leur cursus
 
-- Contribution d'étudiants en école d'ingénieur (ENSEIRB) dans le cadre de leur cursus
+  - IA générative : interdiction de scanner notre site, recommandation de ne pas les utiliser pour rédiger des contenus.
 
-- IA générative : interdiction de scanner notre site, recommandation de ne pas les utiliser pour rédiger des contenus.
+  - Vie de l'équipe : petite équipe stable. Il faudrait renouveler/recruter.
 
-- Vie de l'équipe : petite équipe stable. Il faudrait renouveler/recruter.
 
 Questions posées par l'assemblée:
 
@@ -159,7 +152,7 @@ Questions posées par l'assemblée:
 
 ## **2. Bilan moral du président**
 
-Président depuis quelques années. 2024 (et 2025) a marqué un retour sur le format écrit et le site, avec du travail autour des contenus. La  diversification (diffusion d'émissions Twitch, par exemple) n'a pas  forcément bien marché.
+Président depuis quelques années. 2024 (et 2025) a marqué un retour sur le format écrit et le site, avec du travail autour des contenus. La diversification (diffusion d'émissions Twitch, par exemple) n'a pas forcément bien marché.
 
 Avoir un Conseil d'Administration plus actif est un vrai plus.
 
@@ -171,7 +164,7 @@ Constat remonté : manque de diversité de genre.
 
 Travaux toujours en cours sur l'accessibilité du site web.
 
-Proposition d'accompagnement des auteurices et d'amélioration des outils de rédaction => pour accueillir de nouveaux contenus,  nouveaux auteurices, offrir l'opportunité de contribuer à un projet  communautaire.
+Proposition d'accompagnement des auteurices et d'amélioration des outils de rédaction => pour accueillir de nouveaux contenus, nouveaux auteurices, offrir l'opportunité de contribuer à un projet communautaire.
 
 "Ça fait 10 ans, on continue ?"
 
@@ -201,7 +194,7 @@ Questions de l'assemblée :
 
 Budget 2025
 
-- Changement des cotisations : proposition de passer d'un duo "tarif normal à 25 €  et tarif réduit à 10 €" à un duo "tarif normal à 10 € et tarif de  soutien à 25 €"
+- Changement des cotisations : proposition de passer d'un duo "tarif normal à 25 € et tarif réduit à 10 €" à un duo "tarif normal à 10 € et tarif de soutien à 25 €"
 
 Questions:
 
@@ -215,23 +208,23 @@ Questions:
 
 ## **4. Mise à jour des statuts et du règlement intérieur de l’association**
 
-Rappel du contexte : Signature de la tribune "La culture scientifique contre l'extrême droite" (https://blogs.mediapart.fr/les-invites-de-mediapart/blog/040724/la-culture-scientifique-contre-lextreme-droite) par Zeste de Savoir, sur décision du Conseil d'Administration. Débat en  interne sur l'adéquation de cette décision avec nos statuts, à l'origine de cette proposition de modification des statuts et du règlement  intérieur.
+Rappel du contexte : Signature de la tribune "La culture scientifique contre l'extrême droite" (https://blogs.mediapart.fr/les-invites-de-mediapart/blog/040724/la-culture-scientifique-contre-lextreme-droite) par Zeste de Savoir, sur décision du Conseil d'Administration. Débat en interne sur l'adéquation de cette décision avec nos statuts, à l'origine de cette proposition de modification des statuts et du règlement intérieur.
 
 ### Article 2 des statuts
 
-Après une discussion entre les participants concernant la formulation exacte à adopter pour l'article 2, il a été mis au votre ces trois options  ci-dessous.
+Après une discussion entre les participants concernant la formulation exacte à adopter pour l'article 2, il a été mis au votre ces trois options ci-dessous.
 
-Option A : “Article 2. Cette association a pour but de promouvoir le partage de connaissances **à toute personne sans distinction**, et d’aider à l’auto-formation dans divers domaines, notamment  informatiques et scientifiques. Elle édite diverses ressources  pédagogiques, de préférence sous licence libre, qu’elle met à  disposition gratuitement.”
+Option A : “Article 2. Cette association a pour but de promouvoir le partage de connaissances **à toute personne sans distinction**, et d’aider à l’auto-formation dans divers domaines, notamment informatiques et scientifiques. Elle édite diverses ressources pédagogiques, de préférence sous licence libre, qu’elle met à disposition gratuitement.”
 
-Option B (non-soumise au vote) : “Article 2. Cette association a pour but de  promouvoir le partage de connaissances, et d’aider à l’auto-formation  dans divers domaines, notamment informatiques et scientifiques. **Elle s’adresse à toute personne, sans distinction.** Elle édite diverses ressources pédagogiques, de préférence sous licence libre, qu’elle met à disposition gratuitement **à ces mêmes personnes**.”
+Option B (non-soumise au vote) : “Article 2. Cette association a pour but de promouvoir le partage de connaissances, et d’aider à l’auto-formation dans divers domaines, notamment informatiques et scientifiques. **Elle s’adresse à toute personne, sans distinction.** Elle édite diverses ressources pédagogiques, de préférence sous licence libre, qu’elle met à disposition gratuitement **à ces mêmes personnes**.”
 
-Option C : “Article 2. Cette association a pour but de promouvoir le partage  de connaissances, et d’aider à l’auto-formation dans divers domaines,  notamment informatiques et scientifiques. Elle édite diverses ressources pédagogiques, de préférence sous licence libre, qu’elle met à  disposition gratuitement. **Ces buts s’appliquent à toute personne, sans distinction.**”
+Option C : “Article 2. Cette association a pour but de promouvoir le partage de connaissances, et d’aider à l’auto-formation dans divers domaines, notamment informatiques et scientifiques. Elle édite diverses ressources pédagogiques, de préférence sous licence libre, qu’elle met à disposition gratuitement. **Ces buts s’appliquent à toute personne, sans distinction.**”
 
 **Vote de la mise à jour des statuts à 16h40** => 7 votes pour l'option A, 5 pour C et 4 abstentions
 
 ### Règlement intérieur
 
-Option soumise au vote après discussion : “Non électoral **Non partisan** : l’association ne doit pas apparaître comme le soutien d’un parti ou d’un·e candidat·e ; **elle peut cependant prendre position publiquement pour défendre ou soutenir  son objet social, y compris en opposition à un parti ou un·e candidat·e à une élection**.”
+Option soumise au vote après discussion : “~~Non électoral~~ **Non partisan** : l’association ne doit pas apparaître comme le soutien d’un parti ou d’un·e candidat·e ; **elle peut cependant prendre position publiquement pour défendre ou soutenir son objet social, y compris en opposition à un parti ou un·e candidat·e à une élection**.”
 
 **Vote de la mise à jour du règlement intérieur à 16h42** => 14 pour, 1 contre, 1 abstention
 
@@ -279,10 +272,10 @@ Pas d'opposition à un vote en groupe pour l'ensemble des candidats.
 
 - Amaury a des retours de gens qui n'adhèrent pas parce que ça n'apporte rien
 
-- SpaceFox remarque que, lors de la création de l'association en 2014, nous étions en plein boom dans la vulgarisation et le partage des connaissances  (ainsi qu'une plus grande stabilité politique). Actuellement c'est  différent, c'est politiquement moins stable et il y a moins d'argent  publique donc cette période n'est pas favorable pour les associations de partage des connaissances.
+- SpaceFox remarque que, lors de la création de l'association en 2014, nous étions en plein boom dans la vulgarisation et le partage des connaissances (ainsi qu'une plus grande stabilité politique). Actuellement c'est différent, c'est politiquement moins stable et il y a moins d'argent publique donc cette période n'est pas favorable pour les associations de partage des connaissances.
 
-- Il précise que concernant la vulgarisation scientifique en général et la  vidéo en particulier, cette vidéo YouTube est informative https://www.youtube.com/watch?v=2UwRMRkEtLw
+- Il précise que concernant la vulgarisation scientifique en général et la vidéo en particulier, cette vidéo YouTube est informative https://www.youtube.com/watch?v=2UwRMRkEtLw
 
-- Florent propose que ce soit dans le billet sur les raisons de nous rejoindre.
+- germinolegrand propose que ce soit dans le billet sur les raisons de nous rejoindre.
 
 Fin de l'Assemblée Générale Ordinaire à 17h04
