(AGO 2025) Utilisation des noms d'état civil à la place des pseudos

--- a/2025/2025-03-01_PV_AGO.md
+++ b/2025/2025-03-01_PV_AGO.md
@@ -9,49 +9,49 @@ association@zestedesavoir.com
 
 Début à 14h07 en visioconférence via le logiciel Jitsi
 
-**Président de séance** : Amaury Carrade
+**Président de séance** : Amaury CARRADE
 
-**Secrétaire de séance** : Alban Traineau
+**Secrétaire de séance** : Alban TRAINEAU
 
 17 adhérents sont membres de l'association Zeste de Savoir à ce jour. 16 membres sont présents ou représentés.
 
 Adhérents présents :
 
-- Aabu (Arnaud Dusch) => Présent jusqu'à 17:00
+- Arnaud DUSCH (Aabu) => Présent jusqu'à 17:00
 
-- Amaury (Amaury Carrade) => Présent
+- Amaury CARRADE (Amaury) => Présent
 
-- Deuchnord (Jérôme Tanghe) => Présent
+- Jérôme TANGHE (Deuchnord) => Présent
 
-- entwanne (Antoine Rozo) => Présent
+- Antoine ROZO (entwanne) => Présent
 
-- firm1 (Willy KONGUEM MBOUGUEN) => Présent
+- Willy KONGUEM MBOUGUEN (firm1) => Présent
 
-- Fumble (David Roux) => Présent
+- David ROUX (Fumble) => Présent
 
-- Gabbro (Étienne Guesnet) => Présent
+- Étienne GUESNET (Gabbro) => Présent
 
-- germinolegrand (Florent Chapelle) => Présent
+- Florent CHAPELLE (germinolegrand) => Présent
 
-- Heziode (Quentin DAUPRAT) => Présent
+- Quentin DAUPRAT (Heziode) => Présent
 
-- Melcore (Jean Lapostolle) => Present
+- Jean LAPOSTOLLE (Melcore) => Présent
 
-- philippemilink (Philippe SWARTVAGHER) => Présent jusqu’à 16:59
+- Philippe SWARTVAGHER (philippemilink) => Présent jusqu’à 16:59
 
-- qwerty (Justin Missaghieh--Poncet) => Présent
+- Justin MISSAGHIEH--PONCET (qwerty) => Présent
 
-- Rockaround (Antoine Claisse) => Présent
+- Antoine CLAISSE (Rockaround) => Présent
 
-- Situphen (Alban Traineau) => Présent
+- Alban TRAINEAU (Situphen) => Présent
 
-- SpaceFox (François Colin) => Présent
+- François COLIN (SpaceFox) => Présent
 
-- vinc' (Vincent Bochet) => Présent jusqu'à 15h48, procuration à qwerty (Justin Missaghieh--Poncet) pour la fin de l'AGO
+- Vincent BOCHET (vinc') => Présent jusqu'à 15h48, procuration à Justin MISSAGHIEH--PONCET (qwerty) pour la fin de l'AGO
 
 Observateurs :
 
-- Etoile Filante à 14h22 jusqu'à 14h24 puis revenu à 14h28 jusqu'à 15h46
+- Étoile Filante à 14h22 jusqu'à 14h24 puis revenu à 14h28 jusqu'à 15h46
 
 Au début de la séance à 14h07 => 16 adhérents présents donc 16 voix lors des votes
 
@@ -104,10 +104,10 @@ Présentation du rapport d'activité 2024. Il sera publié après l'AGO.
 - 10 ans de Zeste de Savoir
   - Publication d'un billet le jour de la date anniversaire
 
-  - Plusieurs articles sur la page d'accueil : retour des 10 ans, interviews d'Arius, de philippe et (normalement bientôt) d'Amaury.
+  - Plusieurs articles sur la page d'accueil : retour des 10 ans, interviews d'Arius, de Philippe SWARTVAGHER et (normalement bientôt) d'Amaury CARRADE.
 
 - Play Azur Festival:
-  - Représentation par Amaury et Melcore en 2024
+  - Représentation par Amaury CARRADE et Jean LAPOSTOLLE en 2024
 
   - Public : la pop culture.
 
@@ -140,13 +140,13 @@ Présentation du rapport d'activité 2024. Il sera publié après l'AGO.
 
 Questions posées par l'assemblée:
 
-- Fumble: problème d'attractivité de la stack technique ?
+- David ROUX : problème d'attractivité de la stack technique ?
 
-- Situphen : Oui en partie, mais le problème principal est la barrière à l'entrée dans le projet et sa visibilité.
+- Alban TRAINEAU : Oui en partie, mais le problème principal est la barrière à l'entrée dans le projet et sa visibilité.
 
-- SpaceFox a voulu s'y remettre (pour le problème d'url publique/privée), il n'a pas réussi, malgré une expérience professionnelle en informatique et un historique sur le projet.
+- François COLIN a voulu s'y remettre (pour le problème d'url publique/privée), il n'a pas réussi, malgré une expérience professionnelle en informatique et un historique sur le projet.
 
-- Melcore suggère l'organisation de réunions d'aide pour les nouveaux contributeurs. Proposition abondée par Philippe.
+- Jean LAPOSTOLLE suggère l'organisation de réunions d'aide pour les nouveaux contributeurs. Proposition abondée par Philippe.
 
 **Vote du rapport d'activité à 15h12** => Le rapport d'activité est approuvé avec 15 votes pour et une abstention.
 
@@ -172,7 +172,7 @@ Remerciements envers les adhérents et les membres de la communauté, merci à t
 
 Commentaires de l'assemblée :
 
-- Qwerty parle du manque de diversité autre que de genre (catégorie sociale, par exemple).
+- Justin MISSAGHIEH--PONCET parle du manque de diversité autre que de genre (catégorie sociale, par exemple).
 
 **Vote du bilan moral à 15h22** => Approuvé avec 15 votes pour et une abstention
 
@@ -199,8 +199,8 @@ Budget 2025
 Questions:
 
 - Renouvellement de la direction artistique compris dans "Relations extérieures" ? Oui c'est inclus à l'intérieur (en tous cas en partie, ça pourrait être complété par une subvention de fonctionnement)
-- SpaceFox met en garde contre PulseHeberg car, de son expérience, leurs VMs ne sont pas forcément performantes en accès disque.
-- SpaceFox suggère le tarif de soutient à 3x le tarif normal, pour que ce soit le même après réduction des impôts. => Bien reçu et adopté.
+- François COLIN met en garde contre PulseHeberg car, de son expérience, leurs VMs ne sont pas forcément performantes en accès disque.
+- François COLIN suggère le tarif de soutient à 3x le tarif normal, pour que ce soit le même après réduction des impôts. => Bien reçu et adopté.
 
 **Vote du budget à 15h47** => Approuvé à l'unanimité
 
@@ -244,23 +244,23 @@ Mis au vote :
 
 Les membres qui se proposent de faire partie du conseil d'administration pour l'année :
 
-- Rockaround (renouvellement)
+- Antoine CLAISSE (renouvellement)
 
-- Qwerty (renouvellement)
+- Justin MISSAGHIEH--PONCET (renouvellement)
 
-- Gabbro (renouvellement)
+- Étienne GUESNET (renouvellement)
 
-- firm1 (renouvellement)
+- Willy KONGUEM MBOUGUEN (renouvellement)
 
-- Situphen (renouvellement)
+- Alban TRAINEAU (renouvellement)
 
-- Melcore (nouveau membre)
+- Jean LAPOSTOLLE (nouveau membre)
 
-- SpaceFox (nouveau membre)
+- François COLIN (nouveau membre)
 
-- germinolegrand (renouvellement)
+- Florent CHAPELLE (renouvellement)
 
-- Amaury (renouvellement)
+- Amaury CARRADE (renouvellement)
 
 Pas d'opposition à un vote en groupe pour l'ensemble des candidats.
 
@@ -268,14 +268,14 @@ Pas d'opposition à un vote en groupe pour l'ensemble des candidats.
 
 ## **7. Questions diverses**
 
-- SpaceFox demande si on a eu des nouveaux adhérents à l'association en 2024, et si non, depuis quand ?
+- François COLIN demande si on a eu des nouveaux adhérents à l'association en 2024, et si non, depuis quand ?
 
-- Amaury a des retours de gens qui n'adhèrent pas parce que ça n'apporte rien
+- Amaury CARRADE a des retours de gens qui n'adhèrent pas parce que ça n'apporte rien
 
-- SpaceFox remarque que, lors de la création de l'association en 2014, nous étions en plein boom dans la vulgarisation et le partage des connaissances (ainsi qu'une plus grande stabilité politique). Actuellement c'est différent, c'est politiquement moins stable et il y a moins d'argent publique donc cette période n'est pas favorable pour les associations de partage des connaissances.
+- François COLIN remarque que, lors de la création de l'association en 2014, nous étions en plein boom dans la vulgarisation et le partage des connaissances (ainsi qu'une plus grande stabilité politique). Actuellement c'est différent, c'est politiquement moins stable et il y a moins d'argent publique donc cette période n'est pas favorable pour les associations de partage des connaissances.
 
 - Il précise que concernant la vulgarisation scientifique en général et la vidéo en particulier, cette vidéo YouTube est informative https://www.youtube.com/watch?v=2UwRMRkEtLw
 
-- germinolegrand propose que ce soit dans le billet sur les raisons de nous rejoindre.
+- Florent CHAPELLE propose que ce soit dans le billet sur les raisons de nous rejoindre.
 
 Fin de l'Assemblée Générale Ordinaire à 17h04
