--- a/2025/2025-03-01_PV_RCA.md
+++ b/2025/2025-03-01_PV_RCA.md
@@ -7,40 +7,35 @@ association@zestedesavoir.com
 
 Début de la séance à 17h04 en visioconférence via le logiciel Jitsi
 
-**Président de séance** : Amaury Carrade
+**Président de séance** : Amaury CARRADE
 
-**Secrétaire de séance** : Alban Traineau
+**Secrétaire de séance** : Alban TRAINEAU
 
 Présents :
 
-- Amaury (Amaury Carrade)
+- Amaury CARRADE (Amaury)
 
-- firm1 (Willy KONGUEM MBOUGUEN)
 
-- Gabbro (Étienne Guesnet)
-
-- germinolegrand (Florent Chapelle)
-
-- Melcore (Jean Lapostolle)
-
-- Qwerty (Justin Missaghieh--Poncet)
-
-- Rockaround (Antoine Claisse)
-
-- Situphen (Alban Traineau)
-- SpaceFox (François Colin)
+- Willy KONGUEM MBOUGUEN (firm1)
+- Étienne GUESNET (Gabbro)
+- Florent CHAPELLE (germinolegrand)
+- Jean LAPOSTOLLE (Melcore)
+- Justin MISSAGHIEH--PONCET (qwerty)
+- Antoine CLAISSE (Rockaround)
+- Alban TRAINEAU (Situphen)
+- François COLIN (SpaceFox)
 
 9 membres du Conseil d'Administration présents donc 9 voix lors des votes
 
 ## **Renouvellement des postes (président, trésorier, secrétaire)**
 
-Candidat pour la présidence : Amaury
+Candidat pour la présidence : Amaury CARRADE
 
-Candidat pour la trésorerie : firm1
+Candidat pour la trésorerie : Willy KONGUEM MBOUGUEN
 
-Candidat pour le secrétariat : Situphen
+Candidat pour le secrétariat : Alban TRAINEAU
 
-Candidat pour le vice-secrétariat : Melcore
+Candidat pour le vice-secrétariat : Jean LAPOSTOLLE
 
 Pas d'opposition à un vote en groupe pour l'ensemble des candidats.
 
@@ -48,6 +43,6 @@ Pas d'opposition à un vote en groupe pour l'ensemble des candidats.
 
 ## **Organisation (réunions récurrentes)**
 
-Étant donné que les réunions récurrentes mises en place lors du dernier  mandat ont bien fonctionnées, il est décidé de partir sur le même  principe. Pour la première réunion, il est décidé de garder le créneau  du troisième lundi du mois à 21 heures, soit en l'occurence le lundi 17  mars à 21 heures. Pour les réunions suivantes, la date sera définie en  fonction des résultats d'un sondage.
+Étant donné que les réunions récurrentes mises en place lors du dernier mandat ont bien fonctionné, il est décidé de partir sur le même principe. Pour la première réunion, il est décidé de garder le créneau du troisième lundi du mois à 21 heures, soit en l’occurrence le lundi 17 mars à 21 heures. Pour les réunions suivantes, la date sera définie en fonction des résultats d'un sondage.
 
 Fin de la réunion du Conseil d'Administration à 17h20
