Remplace un pseudo oublié

--- a/2025/2025-03-01_PV_AGO.md
+++ b/2025/2025-03-01_PV_AGO.md
@@ -188,7 +188,7 @@ Présentation du bilan.
 
 Questions de l'assemblée :
 
-- Héziode : La banque ne coûte rien ? => Seulement les assurances obligatoires et cotisations ADSIPO
+- Quentin DAUPRAT : La banque ne coûte rien ? => Seulement les assurances obligatoires et cotisations ADSIPO
 
 **Vote du bilan financier à 15h36** => Approuvé à l'unanimité
 
